# simple-agentic-rag-solution-app

./: .dockerignore  .env.example  Dockerfile  LICENSE  README.md  main.py  pyproject.toml  requirements.txt
app/api/: main.py
app/core/: config.py
app/rag/: chunker.py  embeddings.py  engine.py  loader.py  prompts.py  vector_store.py
